Ultimas modificaciones, se agregan modulos faltantes

--- a/src/app/pages/dashboard/dashboard.page.html
+++ b/src/app/pages/dashboard/dashboard.page.html
@@ -1,34 +1,38 @@
 <ion-content class="fondo">
 
 
-  <div class="container-fluid d-flex h-100">
+	<div class="container-fluid d-flex h-100">
 
-    <div class="m-auto">
+		<div class="m-auto">
 
-      <ion-grid  class="w-100 container" >
-        <ion-row>
-          <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4" *ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'" >
-            <ion-card>
-              <ion-card-header class="ion-no-padding">
-                <img src="../../../assets/img/usuariosapp.jpg" class="w-100 ion-no-margin" height="200px" alt="">
-              </ion-card-header>
-              <ion-card-content class="ion-no-padding">
-                <ion-item lines="none">
-                  <ion-label>
-                    <h1>Colaboradores</h1>
-                  </ion-label>
-                  <ion-button (click)="optionsCollab($event,'collaborators')" style="--background: #d6e601;">
-                    <ion-icon slot="icon-only" name="ellipsis-horizontal" class="bg-green p-2"></ion-icon>
-                  </ion-button>
-                  <!-- <ion-button routerLink="usuarios" >
+			<ion-grid class="w-100 container">
+				<ion-row>
+					<ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4"
+						*ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'">
+						<ion-card>
+							<ion-card-header class="ion-no-padding">
+								<img src="../../../assets/img/usuariosapp.jpg" class="w-100 ion-no-margin"
+									height="200px" alt="">
+							</ion-card-header>
+							<ion-card-content class="ion-no-padding">
+								<ion-item lines="none">
+									<ion-label>
+										<h1>Colaboradores</h1>
+									</ion-label>
+									<ion-button (click)="optionsCollab($event,'collaborators')"
+										style="--background: #d6e601;">
+										<ion-icon slot="icon-only" name="ellipsis-horizontal"
+											class="bg-green p-2"></ion-icon>
+									</ion-button>
+									<!-- <ion-button routerLink="usuarios" >
                     <ion-icon slot="icon-only" name="arrow-forward-outline" class="bg-red p-2"></ion-icon>
                   </ion-button> -->
-                </ion-item>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
+								</ion-item>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
 
-          <!-- <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" [sizeLg]="user?.role === 'COLABORADOR' ? 6 : 4">
+					<!-- <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" [sizeLg]="user?.role === 'COLABORADOR' ? 6 : 4">
             <ion-card>
               <ion-card-header class="ion-no-padding">
                 <img src="../../../assets/img/fidelizacion.jpg" class="w-100 ion-no-margin" height="200px" alt="">
@@ -46,28 +50,32 @@
             </ion-card>
           </ion-col> -->
 
-          <ion-col class="my-3 mx-auto" sizeSm="12" [sizeMd]="user?.role === 'GERENTE' ? 4:6" [sizeLg]="user?.role === 'GERENTE' ? 4:6" *ngIf="user?.role !== 'ADMIN'">
-            <ion-card>
-              <ion-card-header class="ion-no-padding">
-                <img src="../../../assets/img/restaurante.jpg" class="w-100 ion-no-margin" height="200px" alt="">
-              </ion-card-header>
-              <ion-card-content class="ion-no-padding">
-                <ion-item lines="none">
-                  <ion-label>
-                    <h1>Restaurantes</h1>
-                  </ion-label>
-                  <ion-button (click)="optionsRest($event,'restaurants')" style="--background: #d6e601;">
-                    <ion-icon slot="icon-only" name="ellipsis-horizontal" class="bg-green p-2"></ion-icon>
-                  </ion-button>
-                  <!-- <button class="button-dot" (click)="opcionesSuc($event,'sucursales')">
+					<ion-col class="my-3 mx-auto" sizeSm="12" [sizeMd]="user?.role === 'GERENTE' ? 4:6"
+						[sizeLg]="user?.role === 'GERENTE' ? 4:6" *ngIf="user?.role !== 'ADMIN'">
+						<ion-card>
+							<ion-card-header class="ion-no-padding">
+								<img src="../../../assets/img/restaurante.jpg" class="w-100 ion-no-margin"
+									height="200px" alt="">
+							</ion-card-header>
+							<ion-card-content class="ion-no-padding">
+								<ion-item lines="none">
+									<ion-label>
+										<h1>Restaurantes</h1>
+									</ion-label>
+									<ion-button (click)="optionsRest($event,'restaurants')"
+										style="--background: #d6e601;">
+										<ion-icon slot="icon-only" name="ellipsis-horizontal"
+											class="bg-green p-2"></ion-icon>
+									</ion-button>
+									<!-- <button class="button-dot" (click)="opcionesSuc($event,'sucursales')">
                     <ion-icon name="ellipsis-horizontal" title="Ver mas"></ion-icon>
                   </button> -->
-                </ion-item>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
+								</ion-item>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
 
-          <!-- <ion-col class="my-3 mx-auto " sizeSm="12" sizeMd="6" sizeLg="4" *ngIf="user?.role == 'ADMIN'">
+					<!-- <ion-col class="my-3 mx-auto " sizeSm="12" sizeMd="6" sizeLg="4" *ngIf="user?.role == 'ADMIN'">
             <ion-card>
               <ion-card-header class="ion-no-padding">
                 <img src="https://www.tornadostore.com/documentos/93/370_sucursales.jpg" class="w-100 ion-no-margin" height="200px" alt="">
@@ -85,29 +93,32 @@
             </ion-card>
           </ion-col> -->
 
-          <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4" *ngIf="user?.role == 'ADMIN'">
-            <ion-card>
-              <ion-card-header class="ion-no-padding">
-                <img src="../../../assets/img/restaurante.jpg" class="w-100 ion-no-margin" height="200px" alt="">
-              </ion-card-header>
-              <ion-card-content class="ion-no-padding">
-                <ion-item lines="none">
-                  <ion-label>
-                    <h1>Restaurantes</h1>
-                  </ion-label>
-                  <ion-button (click)="optionsRest($event,'restaurants')" style="--background: #d6e601;">
-                    <ion-icon slot="icon-only" name="ellipsis-horizontal" class="bg-green p-2"></ion-icon>
-                  </ion-button>
-                  <!-- <ion-button routerLink="/restaurant">
+					<ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4" *ngIf="user?.role == 'ADMIN'">
+						<ion-card>
+							<ion-card-header class="ion-no-padding">
+								<img src="../../../assets/img/restaurante.jpg" class="w-100 ion-no-margin"
+									height="200px" alt="">
+							</ion-card-header>
+							<ion-card-content class="ion-no-padding">
+								<ion-item lines="none">
+									<ion-label>
+										<h1>Restaurantes</h1>
+									</ion-label>
+									<ion-button (click)="optionsRest($event,'restaurants')"
+										style="--background: #d6e601;">
+										<ion-icon slot="icon-only" name="ellipsis-horizontal"
+											class="bg-green p-2"></ion-icon>
+									</ion-button>
+									<!-- <ion-button routerLink="/restaurant">
                     <ion-icon slot="icon-only" name="arrow-forward-outline" class="bg-red p-2"></ion-icon>
                   </ion-button> -->
-                </ion-item>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
+								</ion-item>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
 
 
-          <!-- <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4" *ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'" >
+					<!-- <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4" *ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'" >
             <ion-card>
               <ion-card-header class="ion-no-padding">
                 <img src="https://www.espaciofoodservice.cl/wp-content/uploads/2019/06/59451143_1215563435275337_5293594235096793088_n.jpg" class="w-100 ion-no-margin" height="200px" alt="">
@@ -126,44 +137,50 @@
           </ion-col> -->
 
 
-          <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4"  *ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'">
-            <ion-card>
-              <ion-card-header class="ion-no-padding">
-                <img src="../../../assets/img/reportes.jpg" class="w-100 ion-no-margin" height="200px" alt="">
-              </ion-card-header>
-              <ion-card-content class="ion-no-padding">
-                <ion-item lines="none">
-                  <ion-label>
-                    <h1>Reportes</h1>
-                  </ion-label>
-                  <ion-button routerLink="reportes" style="--background: #d6e601;">
-                    <ion-icon slot="icon-only" name="arrow-forward-outline" class="bg-green p-2"></ion-icon>
-                  </ion-button>
-                </ion-item>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
+					<ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4"
+						*ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'">
+						<ion-card>
+							<ion-card-header class="ion-no-padding">
+								<img src="../../../assets/img/reportes.jpg" class="w-100 ion-no-margin" height="200px"
+									alt="">
+							</ion-card-header>
+							<ion-card-content class="ion-no-padding">
+								<ion-item lines="none">
+									<ion-label>
+										<h1>Reportes</h1>
+									</ion-label>
+									<ion-button routerLink="/reportes" style="--background: #d6e601;">
+										<ion-icon slot="icon-only" name="arrow-forward-outline"
+											class="bg-green p-2"></ion-icon>
+									</ion-button>
+								</ion-item>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
 
-          <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4"  *ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'">
-            <ion-card>
-              <ion-card-header class="ion-no-padding">
-                <img src="../../../assets/img/cobrar.jpg" class="w-100 ion-no-margin" height="200px" alt="">
-              </ion-card-header>
-              <ion-card-content class="ion-no-padding">
-                <ion-item lines="none">
-                  <ion-label>
-                    <h1>Cupones</h1>
-                  </ion-label>
-                  <ion-button routerLink="cuopons" style="--background: #d6e601;">
-                    <ion-icon slot="icon-only" name="arrow-forward-outline" class="bg-green p-2"></ion-icon>
-                  </ion-button>
-                </ion-item>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
+					<ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4"
+						*ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'">
+						<ion-card>
+							<ion-card-header class="ion-no-padding">
+								<img src="../../../assets/img/cobrar.jpg" class="w-100 ion-no-margin" height="200px"
+									alt="">
+							</ion-card-header>
+							<ion-card-content class="ion-no-padding">
+								<ion-item lines="none">
+									<ion-label>
+										<h1>Cupones</h1>
+									</ion-label>
+									<ion-button [routerLink]="['/cupones']" style="--background: #d6e601;">
+										<ion-icon slot="icon-only" name="arrow-forward-outline"
+											class="bg-green p-2"></ion-icon>
+									</ion-button>
+								</ion-item>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
 
 
-          <!-- <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4"  *ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'">
+					<!-- <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4"  *ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'">
             <ion-card>
               <ion-card-header class="ion-no-padding">
                 <img src="https://i0.wp.com/www.diegocoquillat.com/wp-content/uploads/2019/09/Habitos-del-consumidor-a-la-hora-de-seleccionar-el-restaurante.jpg?fit=700%2C336&ssl=1" class="w-100 ion-no-margin" height="200px" alt="">
@@ -183,25 +200,28 @@
 
 
 
-          <ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4"  *ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'">
-            <ion-card>
-              <ion-card-header class="ion-no-padding">
-                <img src="../../../assets/img/quejas.png" class="w-100 ion-no-margin" height="200px" alt="">
-              </ion-card-header>
-              <ion-card-content class="ion-no-padding">
-                <ion-item lines="none">
-                  <ion-label>
-                    <h1>Ayudanos a mejorar</h1>
-                  </ion-label>
-                  <ion-button routerLink="quejas" style="--background: #d6e601;">
-                    <ion-icon slot="icon-only" name="arrow-forward-outline" class="bg-green p-2"></ion-icon>
-                  </ion-button>
-                </ion-item>
-              </ion-card-content>
-            </ion-card>
-          </ion-col>
+					<ion-col class="my-3 mx-auto" sizeSm="12" sizeMd="6" sizeLg="4"
+						*ngIf="user?.role == 'ADMIN' || user?.role == 'GERENTE'">
+						<ion-card>
+							<ion-card-header class="ion-no-padding">
+								<img src="../../../assets/img/quejas.png" class="w-100 ion-no-margin" height="200px"
+									alt="">
+							</ion-card-header>
+							<ion-card-content class="ion-no-padding">
+								<ion-item lines="none">
+									<ion-label>
+										<h1>Ayudanos a mejorar</h1>
+									</ion-label>
+									<ion-button routerLink="/quejas" style="--background: #d6e601;">
+										<ion-icon slot="icon-only" name="arrow-forward-outline"
+											class="bg-green p-2"></ion-icon>
+									</ion-button>
+								</ion-item>
+							</ion-card-content>
+						</ion-card>
+					</ion-col>
 
-<!--
+					<!--
           <ion-col class="my-3" sizeSm="6" sizeMd="4">
             <ion-card>
               <ion-card-header>
@@ -220,14 +240,13 @@
             </ion-card>
           </ion-col> -->
 
-        </ion-row>
-      </ion-grid>
+				</ion-row>
+			</ion-grid>
 
 
-    </div>
+		</div>
 
 
-  </div>
+	</div>
 
 </ion-content>
-
