--- a/src/app/pages/promotions/promotions.component.scss
+++ b/src/app/pages/promotions/promotions.component.scss
@@ -1,3 +1,8 @@
+#modal-items{
+    --max-height : 400px !important;
+    --max-width : 400px !important;	
+}
+
 ion-toggle{
     --handle-background: #ff9600 !important;
     --handle-background-checked : #d6e601 !important;
