--- a/src/app/shared/components/options-collaborators/options-collaborators.component.html
+++ b/src/app/shared/components/options-collaborators/options-collaborators.component.html
@@ -1,6 +1,6 @@
 <ion-content>
 	<ion-list>
-		<ion-item button [routerLink]="['/usuarios']" (click)="cerrarPop()">Usuarios</ion-item>
+		<ion-item button [routerLink]="['/usuarios']" (click)="cerrarPop()">Colaboradores</ion-item>
 		<ion-item button [routerLink]="['/deliveries']" (click)="cerrarPop()">Deliveries</ion-item>
     <ion-item button [routerLink]="['/clientes']" (click)="cerrarPop()">Clientes</ion-item>
 	</ion-list>
