--- a/src/app/pages/dashboard/dashboard.page.scss
+++ b/src/app/pages/dashboard/dashboard.page.scss
@@ -10,3 +10,23 @@ ion-grid {
     --ion-grid-width-sm : 30px !important;
     --ion-grid-width-xs : 30px !important;
   }
+
+.itemModulo{
+    width: 97%;
+    margin: 1.5%;
+    border-radius: 10px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    overflow: hidden;
+    
+    ion-card-header{
+        height: 20vh;
+        .img{
+            width: 100%;
+            height: 70%;
+            background-size: cover;
+            background-position: center;
+        }
+    }
+
+}
