--- a/src/app/pages/reportes/reportes.page.html
+++ b/src/app/pages/reportes/reportes.page.html
@@ -8,7 +8,7 @@
 
 			<div class="container-fluid ">
 
-				<div class="d-flex row  my-4" *ngIf="AllOrders.length > 0">
+				<div class="d-flex row  my-4" *ngIf="AllOrders.length == 0">
 
 					<div class="mx-auto">
 						<div class="mx">
